SERVER-40483 Return more informative error when changing the doc shard key caues DuplicateKey error on _id