src/mongo/s/commands/cluster_write_cmd.cpp
@@ -40,6 +40,7 @@
 #include "mongo/db/curop.h"
 #include "mongo/db/lasterror.h"
 #include "mongo/db/stats/counters.h"
+#include "mongo/db/storage/duplicate_key_error_info.h"
 #include "mongo/executor/task_executor_pool.h"
 #include "mongo/s/client/shard_registry.h"
 #include "mongo/s/cluster_last_error_info.h"
@@ -253,6 +254,16 @@ bool handleWouldChangeOwningShardError(OperationContext* opCtx,
         } catch (const DBException& e) {
             // Set the error status to the status of the failed command and abort the transaction.
             auto status = e.toStatus();
+            if (status == ErrorCodes::DuplicateKey) {
+                BSONObjBuilder extraInfoBuilder;
+                status.extraInfo()->serialize(&extraInfoBuilder);
+                auto extraInfo = extraInfoBuilder.obj();
+                if (extraInfo.getObjectField("keyPattern").hasField("_id"))
+                    status = status.withContext(
+                        "Failed to update document's shard key field. There is either an "
+                        "orphan for this document or _id for this collection is not globally "
+                        "unique.");
+            }
             response->getErrDetails().back()->setStatus(status);
 
             auto txnRouterForAbort = TransactionRouter::get(opCtx);
@@ -262,8 +273,18 @@ bool handleWouldChangeOwningShardError(OperationContext* opCtx,
             return false;
         }
     } else {
-        // Delete the original document and insert the new one
-        return updateShardKeyValue(opCtx, request, response, wouldChangeOwningShardErrorInfo.get());
+        try {
+            // Delete the original document and insert the new one
+            return updateShardKeyValue(
+                opCtx, request, response, wouldChangeOwningShardErrorInfo.get());
+        } catch (const ExceptionFor<ErrorCodes::DuplicateKey>& ex) {
+            Status status = ex->getKeyPattern().hasField("_id")
+                ? ex.toStatus().withContext(
+                      "Failed to update document's shard key field. There is either an orphan "
+                      "for this document or _id for this collection is not globally unique.")
+                : ex.toStatus();
+            uassertStatusOK(status);
+        }
     }
 
     MONGO_UNREACHABLE
